fixed socials spacing

--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -49,6 +49,7 @@
 
 .contactTextCont {
   position: relative;
+  width: 100%;
 }
 
 .socialsNav:before,
